--- a/site/public/404.html
+++ b/site/public/404.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="noindex, nofollow">
-<title>404 Page not found | Personal Site</title>
+<title>404 Page not found | Home</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
@@ -73,7 +73,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://localhost:1313/" accesskey="h" title="Personal Site (Alt + H)">Personal Site</a>
+            <a href="http://localhost:1313/" accesskey="h" title="Home (Alt + H)">Home</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -106,7 +106,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2024 <a href="http://localhost:1313/">Personal Site</a></span> · 
+        <span>&copy; 2024 <a href="http://localhost:1313/">Home</a></span> · 
 
     <span>
         Powered by
@@ -121,6 +121,8 @@
 </a><h1 id="ext">This is an extension</h1>
 
 <link rel="stylesheet" href="/css/custom.css">
+
+<script src="/js/custom.js"></script>
 
 <script>
     let menu = document.getElementById('menu')
